Worked on data fetch apis
