# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\API\DataController;
 use App\Http\Controllers\API\FarmerProfileController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -16,3 +17,6 @@ use Illuminate\Support\Facades\Route;
 */
 
 Route::post('/farmer/register', [FarmerProfileController::class, 'registerFarmer']);
+Route::get('/farmers', [DataController::class, 'getAllFarmers']);
+Route::get('/farmer/{id}', [DataController::class, 'getFarmer']);
+
